[gd_scene load_steps=2 format=3 uid="uid://drsw182sdphec"]

[ext_resource type="Script" path="res://Scripts/Screens/main_menu.gd" id="1_yhbs7"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yhbs7")

[node name="GameName" type="Label" parent="."]
layout_mode = 2
anchor_left = 0.339844
anchor_top = 0.223765
anchor_right = 0.660156
anchor_bottom = 0.351852
theme_override_font_sizes/font_size = 60
text = "CARD SHARP"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.374132
anchor_top = 0.385802
anchor_right = 0.625868
anchor_bottom = 0.771605
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
metadata/_edit_use_anchors_ = true

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Play"

[node name="Description" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Game Description
"

[node name="Achievements" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Achievements"

[node name="Collection" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Collection"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Quit Game
"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Description" to="." method="_on_description_pressed"]
[connection signal="pressed" from="VBoxContainer/Achievements" to="." method="_on_achievements_pressed"]
[connection signal="pressed" from="VBoxContainer/Collection" to="." method="_on_collection_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
